# telescope-fuzzy-sorter.nvim

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  fzs_lib.lua
lua/: fzs_lib.lua
lua/telescope/_extensions/: fuzzy_sorter.lua
src/: simple_fuzzy_sorter.cpp  simple_fuzzy_sorter.h
telescope/_extensions/: fuzzy_sorter.lua
test/: fuzzy_sorter_test.cpp
